Add QuestionTemplate
