# backend/code-execution-service/swagger.yml
@@ -21,3 +21,66 @@ paths:
                 properties:
                   message:
                     type: string
+                    example: "Server is running"
+
+  /api/run:
+    post:
+      tags:
+        - Code Execution
+      summary: Execute Code
+      description: Executes code in a specified language with given input and expected output.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                language:
+                  type: string
+                  description: The programming language to execute the code in.
+                  example: "python"
+                code:
+                  type: string
+                  description: The source code to execute.
+                  example: "name = input()\nage = input()\nprint('Hello ' + name + '. You are ' + age + '?')\n\n"
+                stdinList:
+                  type: array
+                  description: List of standard input values to pass to the code.
+                  items:
+                    type: string
+                  example: ["Alice\n21", "Peter\n22"]
+                stdoutList:
+                  type: array
+                  description: Expected standard output values to compare against.
+                  items:
+                    type: string
+                  example:
+                    ["Hello Alice. You are 21?\n", "Hello Peter. You are 22?\n"]
+      responses:
+        200:
+          description: Execution Result
+          content:
+            application/json:
+              schema:
+                type: object
+        400:
+          description: Bad Request - Missing Required Fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Missing required fields: language, code, stdinList, or stdoutList"
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Failed to execute code"
